samples/_failures_safe/1761271124_593a47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5ffba30.c: In function ‘main’:
./samples/SAFE/__tmp_d5ffba30.c:154:5: error: expected expression at end of input
  154 |     if (result == NULL)
      |     ^~
./samples/SAFE/__tmp_d5ffba30.c:154:5: error: expected declaration or statement at end of input
